# Culture

./: .cursorrules  .env.template  .gitignore  .graphqlconfig  CLAUDE.md  CultureExtractor.sln  Program.cs  README.md  RipperPlaywright.csproj  RipperPlaywright.sln  blacked_scene_and_gallery_matching.ipynb  browser_control.ipynb  common.py  completionist_performers.json  cookies.ipynb  culture_extractor.ipynb  data_quality.ipynb  decrypt_hotaudio.ipynb  decrypt_hotaudio.py  docker-compose.yml  duplicate_files.ipynb  environment.yml  eva_de_vil.ipynb  eva_de_vil_dirty_words_k2s_rename.ipynb  export_completionist_performers.py  face_extraction.ipynb  gallery_dates.ipynb  gwa_whole_shebang.ipynb  import_bralessforever_images.py  import_completionist_performers.py  import_manyvids_release.py  indexxx_scraper.py  macos-local-network-privacy-issue.md  manyvids.ipynb  markers.ipynb  match_performer_face.py  misc_stash.ipynb  nzb.ipynb  polars.ipynb  ps-porn.ipynb  (+15 more)
BralessForever/: import.ipynb  main.py  pyproject.toml
api/: pyproject.toml
api/api/: __init__.py  config.py  dependencies.py  main.py
api/api/routers/: __init__.py  downloads.py  face_matching.py  performers.py  releases.py  sites.py  utils.py
api/api/schemas/: __init__.py  performers.py  releases.py  sites.py
api/api/services/: __init__.py  job_manager.py  stashapp.py  stashdb.py  stashface.py
aural/: .env.example  .gitignore  CLAUDE.md  Culture  README-download-workflow.md  README-reddit-analyzer.md  README.md  REDDIT_SETUP.md  TRANSFORMATION_GUIDE.md  WORKFLOW.md  analysis-comparison-report.js  analyze-and-download.js  analyze-download-import.js  analyze-reddit-post.js  analyze_download_import.py  analyze_reddit_post.py  ao3_extractor.py  archive_imported_saved.py  audiochan_extractor.py  backfill_stashapp_ids.py  check_status.py  cleanup_duplicate_releases.py  cleanup_orphaned_json.py  common-extractor-types.js  config.py  conftest.py  create-analysis-directories.js  cyoa-import.js  cyoa_import.py  download-orchestrator-v2.js  download-orchestrator.js  download_missing_scripts.py  enhanced-reddit-preprocessor.js  environment.yml  erocast_extractor.py  example-workflow.js  exceptions.py  find_legacy_by_fingerprint.py  find_legacy_in_stashapp.py  find_missing_scripts.py  (+71 more)
aural/.claude/: settings.local.json
aural/.claude/agents/: port-to-python.md
aural/analyses/1amzk7q/: llm_analysis.json  notes.md  original_post.json  reference_analysis.json
aural/analyses/1lg7777/: llm_analysis.json  original_post.json  reference_analysis.json
aural/analyses/1ljhk83/: llm_analysis.json  notes.md  original_post.json  reference_analysis.json
aural/analyses/1m9aefh/: llm_analysis.json  notes.md  original_post.json  reference_analysis.json
aural/analyses/1mg578g/: llm_analysis.json  original_post.json
aural/analyses/1mhsvf0/: llm_analysis.json  original_post.json
aural/analyses/sqb97m/: llm_analysis.json  original_post.json  reference_analysis.json
aural/analysis_results/: 1lxhwbd_f4m-catching-a-shy-touch-starved-girl-masturbating.json  1lxhwbd_f4m-catching-a-shy-touch-starved-girl-masturbating_analysis.json  1mhsvf0_f4m-aphrodite-comforts-her-husband-after-he-feels.json
aural/analysis_storage/comparison_reports/: README.md
aural/analysis_storage/experimental/: README.md
aural/analysis_storage/llm_approved/: README.md
aural/analysis_storage/llm_rejected/: README.md
aural/analysis_storage/sonnet_reference/: README.md
aural/data/releases/: index.json
aural/docs/: HOTAUDIO_CASE_STUDIES.md  cyoa-import-guide.md  data_structure_recommendations.md  gwasi_data_format.md  hotaudio-crypto-keys.json  improved_data_structure.md
aural/docs/hotaudio-verification/: case1-short-audio.json  case2-long-audio.json
aural/hotaudio-decrypt/: .gitignore  audiosource-hook.js  capture-audio-direct.js  nozzle-annotated.js  package-lock.json  package.json  timepoll-analysis.md
cli/: pyproject.toml
cli/culture_cli/: api_client.py  cli.py
cli/culture_cli/commands/: sync.py
cli/culture_cli/utils/: formatters.py  sync_engine.py
extractors/scrapy/: .env.template  README.md  check_db.py  pyproject.toml  test_utils.py
extractors/scrapy/cultureextractorscrapy/: extensions.py  items.py  pipelines.py  settings.py  utils.py
extractors/scrapy/scripts/: download_progress.py  xart_cleanup_duplicates.py  xart_rename_short_names.py
libraries/: FaceDatasetBuilder.py  GroupMakeup.py  StashDbClient.py  alembic.ini  browser.py  client_culture_extractor.py  client_stashapp.py  file_renamer.py  performer_matcher.py  pyproject.toml  scene_matcher.py  scene_states.py  stash_check_builder.py
libraries/alembic/: env.py
libraries/alembic/versions/: 0001_baseline.py  61f3ef54b0c6_add_json_document_to_tags.py  b5c8aff455af_fix_tags_json_document_type.py
libraries/libraries/: FaceDatasetBuilder.py  GroupMakeup.py  StashDbClient.py  browser.py  client_culture_extractor.py  client_stashapp.py  file_renamer.py  performer_matcher.py  scene_matcher.py  scene_states.py  stash_check_builder.py  stashdb_lake.py
libraries/libraries/models/: __init__.py  base.py  culture_extractor.py
patreon/: .cursorrules  .gitignore  .pre-commit-config.yaml  MEMBERSHIP_API_USAGE.md  README.md  USAGE.md  cookies.json  format.py  pyproject.toml  requirements.txt  test_membership_api.py
patreon/scripts/: cookie_scraper.py  debug_har.py  scraper.py  validate_capture.py
patreon/tests/: __init__.py  test_filename_generation.py
scrapy/: .gitignore  check_db.py  cookies_to_aria2.py  pyproject.toml  scrapy.cfg  test_utils.py
scrapy/cultureextractorscrapy/: items.py  pipelines.py  settings.py  utils.py
scrapy/cultureextractorscrapy/spiders/: angelslove.py  database.py  tickling.py  wowgirls.py
scrapy/dom_analysis/bralessforever/: categories.html  category_casually-exposed.html  main.html  video_e12149c1-457b-408c-be94-6d59c9cbf774.html
scrapy/scrapy/: test_utils.py
scrapy/scrapy/cultureextractorscrapy/: items.py  middlewares.py  pipelines.py  settings.py  utils.py
scrapy/scrapytickling/: items.py  middlewares.py  pipelines.py  settings.py
(+745 files in other folders)
