[project]
name = "ce-cli"
version = "0.1.0"
description = "CLI tool for Culture Extractor database operations"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "typer>=0.15.1",
    "rich>=13.9.4",
    "polars>=1.19.0",
    "psycopg[binary]>=3.2.5",
    "python-dotenv>=1.0.1",
    "newnewid>=0.1.0",
]

[project.scripts]
ce = "ce_cli.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ce_cli", "libraries"]

[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "ipykernel>=6.29.5",
]
