[project]
name = "ce-cli"
version = "0.1.0"
description = "CLI tool for Culture Extractor database operations"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "typer>=0.15.1",
    "rich>=13.9.4",
    "polars>=1.19.0",
    "psycopg[binary]>=3.2.5",
    "python-dotenv>=1.0.1",
    "newnewid>=0.1.0",
]

[project.scripts]
ce = "ce_cli.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ce_cli", "libraries"]

[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "ipykernel>=6.29.5",
    "ruff>=0.14.3",
]

[tool.ruff]
# Set the target Python version
target-version = "py312"

# Set line length to match common Python standards
line-length = 120

# Exclude common directories
exclude = [
    ".git",
    ".venv",
    "venv",
    "__pycache__",
    "*.egg-info",
    ".pytest_cache",
    ".ruff_cache",
]

[tool.ruff.lint]
# Enable specific rule categories
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort (import sorting)
    "N",      # pep8-naming
    "UP",     # pyupgrade (modern Python syntax)
    "B",      # flake8-bugbear (common bugs)
    "C4",     # flake8-comprehensions
    "DTZ",    # flake8-datetimez (timezone aware)
    "T10",    # flake8-debugger
    "ICN",    # flake8-import-conventions
    "PIE",    # flake8-pie
    "PT",     # flake8-pytest-style
    "Q",      # flake8-quotes
    "RSE",    # flake8-raise
    "RET",    # flake8-return
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "ARG",    # flake8-unused-arguments
    "PTH",    # flake8-use-pathlib
    "ERA",    # eradicate (commented-out code)
    "PL",     # Pylint
    "RUF",    # Ruff-specific rules
]

# Ignore specific rules that might be too strict for CLI tools
ignore = [
    "PLR0913",  # Too many arguments to function call
    "PLR2004",  # Magic value used in comparison
    "RET504",   # Unnecessary assignment before return
]

# Allow autofix for all enabled rules
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.per-file-ignores]
# Ignore certain rules in test files
"tests/**/*.py" = [
    "ARG",      # Unused arguments are common in tests
    "PLR2004",  # Magic values are acceptable in tests
]

[tool.ruff.lint.isort]
# Configure import sorting
known-first-party = ["ce_cli", "libraries"]
force-single-line = false
lines-after-imports = 2

[tool.ruff.format]
# Use double quotes for strings
quote-style = "double"

# Indent with spaces
indent-style = "space"

# Respect magic trailing comma
skip-magic-trailing-comma = false

# Auto-detect line endings
line-ending = "auto"
