[project]
name = "culture"
version = "0.1.0"
description = "Culture platform: scrapers, CLI, and data analysis tools"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "pandas>=2.3.3",
    "pyarrow>=22.0.0",
]

[tool.uv.workspace]
members = ["api", "cli", "extractors/scrapy", "libraries", "aural"]

[tool.uv.sources]
culture-libraries = { workspace = true }

[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "ipykernel>=6.29.5",
    "ruff>=0.14.3",
]

[tool.ruff]
target-version = "py314"
line-length = 120

exclude = [
    ".git",
    ".venv",
    "venv",
    "__pycache__",
    "*.egg-info",
    ".pytest_cache",
    ".ruff_cache",
]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort (import sorting)
    "N",      # pep8-naming
    "UP",     # pyupgrade (modern Python syntax)
    "B",      # flake8-bugbear (common bugs)
    "C4",     # flake8-comprehensions
    "DTZ",    # flake8-datetimez (timezone aware)
    "T10",    # flake8-debugger
    "ICN",    # flake8-import-conventions
    "PIE",    # flake8-pie
    "PT",     # flake8-pytest-style
    "Q",      # flake8-quotes
    "RSE",    # flake8-raise
    "RET",    # flake8-return
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "ARG",    # flake8-unused-arguments
    "PTH",    # flake8-use-pathlib
    "ERA",    # eradicate (commented-out code)
    "PL",     # Pylint
    "RUF",    # Ruff-specific rules
]

ignore = [
    "PLR0913",  # Too many arguments to function call
    "PLR2004",  # Magic value used in comparison
    "RET504",   # Unnecessary assignment before return
    "TC001",    # Move import into type-checking block (breaks runtime for FastAPI deps)
    "TC003",    # Move stdlib import into type-checking block (breaks runtime)
]

fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "ARG",      # Unused arguments are common in tests
    "PLR2004",  # Magic values are acceptable in tests
]

[tool.ruff.lint.isort]
known-first-party = ["culture_cli", "libraries"]
force-single-line = false
lines-after-imports = 2

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
