[project]
name = "bralessforever"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "newnewid>=0.5.0",
    "pandas>=2.3.2",
    "polars>=1.32.3",
    "psycopg[binary]>=3.2.9",
    "pyarrow>=21.0.0",
    "python-dotenv>=1.1.1",
    "stashapp-tools>=0.2.58",
]
