[project]
name = "gwasi-extractor"
version = "0.1.0"
description = "Extract and process audio content metadata from GWASI and related platforms"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "requests>=2.31.0",
    "praw>=7.7.1",
    "python-dotenv>=1.0.0",
    "stashapp-tools>=0.2.59",
    "playwright>=1.57.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ruff>=0.14.10",
]
