[project]
name = "gwasi-extractor"
version = "0.1.0"
description = "Extract and process audio content metadata from GWASI and related platforms"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "requests>=2.31.0",
    "praw>=7.7.1",
    "python-dotenv>=1.0.0",
    "stashapp-tools>=0.2.59",
    "playwright>=1.57.0",
    "httpx>=0.28.0",
    "cryptography>=44.0.0",
    "beautifulsoup4>=4.12.0",
    "yt-dlp>=2025.12.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.14.10",
]
