[project]
name = "culture-cli"
version = "0.1.0"
description = "CLI tool for Culture platform database operations"
requires-python = ">=3.14"
dependencies = [
    "typer>=0.15.1",
    "rich>=13.9.4",
    "culture-libraries",
]

[project.scripts]
culture = "culture_cli.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["culture_cli"]
