[project]
name = "culture-libraries"
version = "0.1.0"
description = "Shared client libraries for Culture platform"
requires-python = ">=3.14"
dependencies = [
    "polars>=1.19.0",
    "psycopg[binary]>=3.2.5",
    "python-dotenv>=1.0.1",
    "stashapp-tools>=0.2.52",
    "numpy>=2.0.0",
    "python-levenshtein>=0.27.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
