[project]
name = "patreon-scraper"
version = "0.1.0"
description = "A Python-based project for scraping and analyzing content from multiple Patreon accounts"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "requests>=2.31.0",
    "polars>=0.20.0",
]

[project.optional-dependencies]
dev = [
    "ipython>=8.0.0",
    "jupyter>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["scripts"]

[tool.uv]
dev-dependencies = [
    "black>=24.8.0",
    "ipython>=8.0.0",
    "pre-commit>=3.5.0",
    "pytest>=8.3.5",
    "pytest-cov>=5.0.0",
    "ruff>=0.11.11",
]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | data
  | captured
  | media
)/
'''

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
norecursedirs = ["scripts", "data", "captured", "media", ".git", ".venv"]
addopts = [
    "--verbose",
    "--tb=short",
    "--strict-markers",
    "--disable-warnings",
    "--cov=scripts",
    "--cov-report=term-missing",
    "--cov-report=html:htmlcov",
]
markers = [
    "unit: Unit tests for individual functions",
    "integration: Integration tests for workflows",
    "slow: Tests that take a long time to run",
    "network: Tests that require network access",
]

[tool.ruff]
line-length = 88  # Match black
target-version = "py38"

[tool.ruff.lint]
# Enable specific rule sets
select = [
    "F",     # Pyflakes (includes undefined names, unused imports)
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "I",     # isort (import sorting)
    "N",     # pep8-naming
    "UP",    # pyupgrade (modernize Python code)
    "B",     # flake8-bugbear (common bugs)
    "C4",    # flake8-comprehensions
    "SIM",   # flake8-simplify
]

# Ignore specific rules
ignore = [
    "E501",  # line too long (handled by black)
    "F401",  # unused imports (can be useful during development)
    "F541",  # f-string without placeholders (sometimes useful for consistency)
]

# Exclude directories
exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "data",
    "captured",
    "media",
    "build",
    "dist",
]

[tool.ruff.lint.isort]
known-first-party = ["scripts"]
