[project]
name = "culture-extractor-scrapy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "newnewid>=0.5.0",
    "psycopg2-binary>=2.9.10",
    "python-dotenv>=1.1.1",
    "scrapy>=2.13.3",
    "sqlalchemy>=2.0.43",
]
